<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.NewRecipeActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/amountFraction"
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:entries="@array/fraction_dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/amountWhole"
            app:layout_constraintStart_toEndOf="@+id/amountWhole"
            app:layout_constraintTop_toBottomOf="@+id/textView9"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/new_recipe"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/recipeName"
            android:layout_width="525dp"
            android:layout_height="65dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/recipe_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/authorName"
            android:layout_width="325dp"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/author"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeName"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/units"
            android:layout_width="134dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/measurement_units"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/amountFraction"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.004" />

        <EditText
            android:id="@+id/ingredientName"
            android:layout_width="525dp"
            android:layout_height="65dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/ingredient_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/ingredientList"
            android:layout_width="525dp"
            android:layout_height="190dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">
        </LinearLayout>

        <Button
            android:id="@+id/addToList"
            android:layout_width="144dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:onClick="onAddToList"
            android:text="@string/add_ingredient"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/units"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.333" />

        <EditText
            android:id="@+id/directionList"
            android:layout_width="525dp"
            android:layout_height="90dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/directions_hint"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ingredients_format"
            app:layout_constraintStart_toStartOf="@+id/authorName"
            app:layout_constraintTop_toBottomOf="@+id/authorName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/ingredients_list"
            app:layout_constraintStart_toStartOf="@+id/ingredientList"
            app:layout_constraintTop_toBottomOf="@+id/amountWhole" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/directions_format"
            app:layout_constraintStart_toStartOf="@+id/directionList"
            app:layout_constraintTop_toBottomOf="@+id/ingredientList" />

        <Button
            android:id="@+id/publish"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorAccent"
            android:onClick="onSubmit"
            android:text="@string/publish"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel"
            app:layout_constraintTop_toBottomOf="@+id/directionList"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimary"
            android:onClick="onCancel"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/publish"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/directionList"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/amount_whole"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/amount_fraction"
            app:layout_constraintStart_toStartOf="@+id/amountFraction"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <EditText
            android:id="@+id/amountWhole"
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/amount_whole_hint"
            android:maxLength="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.004" />

        <EditText
            android:id="@+id/servingSize"
            android:layout_width="185dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/serving_size"
            android:inputType="number"
            android:maxLength="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/authorName"
            app:layout_constraintTop_toBottomOf="@+id/recipeName"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/measurement"
            app:layout_constraintStart_toStartOf="@+id/ingredientName"
            app:layout_constraintTop_toBottomOf="@+id/ingredientName" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>