<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reviewViewLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/editbox_background"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/recipeBoxImageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/recipe"
            android:scaleType="centerCrop"
            app:srcCompat="@android:drawable/ic_menu_report_image" />

        <RatingBar
            android:id="@+id/recipeBoxAverageRating"
            style="@android:style/Widget.DeviceDefault.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:numStars="5" />

        <TextView
            android:id="@+id/recipeBoxTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/recipe_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/recipeBoxAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/written_by"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>